--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Weather App using JS</title>
-  <link rel='stylesheet' href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css'><link rel="stylesheet" href="./assets//style.css">
 
 </head>
 <body>
@@ -51,7 +51,7 @@
   </section>
 </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./assets/script.js"></script>
 
 </body>
 </html>
