--- a/index.html
+++ b/index.html
@@ -1,57 +1,67 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Weather App using JS</title>
-  <link rel='stylesheet' href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css'><link rel="stylesheet" href="./assets//style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<div class="wrapper">
-  <header><i class='bx bx-left-arrow-alt'></i>App Clima</header>
-  <section class="input-part">
-    <p class="info-txt"></p>
-    <div class="content">
-      <input type="text" spellcheck="false" placeholder="Coloque o nome da Cidade" required>
-      <div class="separator"></div>
-      <button>Use sua localização</button>
-    </div>
-  </section>
-  <section class="weather-part">
-    <img src="" alt="Weather Icon">
-    <div class="temp">
-      <span class="numb">_</span>
-      <span class="deg">°</span>C
-    </div>
-    <div class="weather">_ _</div>
-    <div class="location">
-      <i class='bx bx-map'></i>
-      <span>_, _</span>
-    </div>
-    <div class="bottom-details">
-      <div class="column feels">
-        <i class='bx bxs-thermometer'></i>
-        <div class="details">
-          <div class="temp">
-            <span class="numb-2">_</span>
-            <span class="deg">°</span>C
-          </div>
-          <p>Temperatura</p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Clima Tempo API</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <script src="./assets/script.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="form">
+        <h3>Confira o clima de uma cidade:</h3>
+        <div class="form-input-container">
+          <input
+          type="text"
+          placeholder="Digite o nome da cidade"
+          id="city-input"
+        />
+        <button id="search">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
         </div>
       </div>
-      <div class="column humidity">
-        <i class='bx bxs-droplet-half'></i>
-        <div class="details">
-          <span>_</span>
-          <p>Umidade</p>
+      <div id="weather-data" class="hide">
+        <h2><i class="fa-solid fa-location-dot"></i> <span id="city"></span></h2>
+        <p id="temperature"><span></span>&deg;C</p>
+        <div id="description-container">
+          <p id="description"></p>
+          <img id="weather-icon" src="" alt="Condições atuais">
+        </div>
+        <div id="details-container">
+          <p id="umidity">
+            <i class="fa-solid fa-droplet"></i> 
+            <span></span>
+          </p>
+          <p id="wind">
+            <i class="fa-solid fa-wind"></i>
+            <span></span>
+          </p>
         </div>
       </div>
+      <div id="error-message" class="hide">
+        <p>Não foi possível encontrar o clima de uma cidade com este nome.</p>
+      </div>
+      <div id="loader" class="hide">
+        <i class="fa-solid fa-spinner"></i>
+      </div>
+      <div id="suggestions">
+        <button id="paris">Paris</button>
+        <button id="grecia">Grecia</button>
+        <button id="dubai">Dubai</button>
+        <button id="italia">Itália</button>
+      </div>
     </div>
-  </section>
-</div>
-<!-- partial -->
-  <script  src="./assets/script.js"></script>
-
-</body>
+  </body>
 </html>
